--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,72 +1,83 @@
-/* Set global styles */
-* {
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
-  }
-  
-  /* Center the container element */
-  .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  /* Style the form */
-  form {
-    background-color: #f0f0f0;
-    border-radius: 10px;
-    padding: 20px;
-    width: 300px;
-    max-width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  /* Style the form labels */
-  label {
-    font-size: 14px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    display: block;
-  }
-  
-  /* Style the form inputs */
-  input[type="email"],
-  input[type="password"] {
-    padding: 10px;
-    margin-bottom: 20px;
-    width: 100%;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-  }
-  
-  input[type="submit"] {
-    background-color: blue;
-    color: white;
-    padding: 10px 16px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-  }
-  
-  input[type="submit"]:hover {
-    background-color: #007fff;
-  }
-  
-  /* Style the link to the registration page */
-  a {
-    color: blue;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-  }
-  
+.container {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #6495ED;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.title {
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 30px;
+  color: #333333;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #333333;
+}
+
+input[type="email"],
+input[type="password"] {
+  padding: 10px;
+  width: 95%;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  background-color: #F5F5F5;
+  color: #333333;
+}
+
+.btn {
+  display: block;
+  width: 100%;
+  padding: 12px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  background-color: #3f51b5;
+  color: #FFFFFF;
+  transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+  background-color: #2c3e50;
+}
+
+.cta {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.cta-text {
+  margin-bottom: 10px;
+  font-size: 14px;
+  color: #333333;
+}
+
+.cta-btn {
+  margin-left: 5px;
+}
+
+.forgot-password {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 14px;
+  color: #333333;
+}
+
+.forgot-password a {
+  color: #3f51b5;
+}
