--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,20 +1,25 @@
 <div class="container">
-    <h1>Login</h1>
-    <form>
+  <h1 class="title">Login</h1>
+  <form>
+    <div class="form-group">
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required>
-  
+    </div>
+
+    <div class="form-group">
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
-  
-      <input type="submit" value="Login">
-    </form>
-    <nav>
-        <p>Don't have an account? .</p>
-        <a routerLink="/registration" mat-raised-button color="blue">Register</a>
-    </nav>
-   
-    <p>Forgot your password? <a href="#">Reset it here</a>.</p>
+    </div>
+
+    <button class="btn" type="submit">Login</button>
+  </form>
+
+  <div class="cta">
+    <p class="cta-text">Don't have an account?
+      <a class="cta-btn" routerLink="/registration" mat-raised-button color="primary">Register</a>
+    </p>
+
   </div>
-  
-  
+
+  <p class="forgot-password">Forgot your password? <a href="#">Reset it here</a>.</p>
+</div>
