--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,79 +1,78 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Registration</mat-card-title>
-  </mat-card-header>
+<div class="container">
+  <h1 class="title">Registration</h1>
+  <form>
+    <div class="form-group">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
+    </div>
 
-  <form (ngSubmit)="onSubmit($event)" method="post" action="/submit-form" enctype="multipart/form-data" autocomplete="off" fxLayout="row wrap" fxLayoutGap="16px">
-    <mat-card-content fxLayout="row" fxLayoutGap="32px">
-      <div fxFlex="50">
-        <mat-form-field>
-          <input matInput type="text" id="name" name="name" placeholder="Name" required>
-        </mat-form-field>
+    <div class="form-group">
+      <label for="surname">Surname:</label>
+      <input type="text" id="surname" name="surname" required>
+    </div>
 
-        <mat-form-field>
-          <input matInput type="text" id="surname" name="surname" placeholder="Surname" required>
-        </mat-form-field>
+    <div class="form-group">
+      <label for="mobile">Mobile Number:</label>
+      <input type="tel" id="mobile" name="mobile" required>
+    </div>
 
-        <mat-form-field>
-          <input matInput type="tel" id="mobile" name="mobile" placeholder="Mobile Number" required>
-        </mat-form-field>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+    </div>
 
-        <mat-form-field>
-          <input matInput type="email" id="email" name="email" placeholder="Email" required>
-        </mat-form-field>
-      </div>
+    <div class="form-group">
+      <label for="password1">Password:</label>
+      <input type="password" id="password1" name="password1" required>
+    </div>
 
-      <div fxFlex="50">
-        <mat-form-field>
-          <input matInput type="password" id="password1" name="password1" placeholder="Password" required>
-        </mat-form-field>
+    <div class="form-group">
+      <label for="password2">Confirm Password:</label>
+      <input type="password" id="password2" name="password2" required>
+    </div>
 
-        <mat-form-field>
-          <input matInput type="password" id="password2" name="password2" placeholder="Confirm Password" required>
-        </mat-form-field>
 
-        <mat-form-field>
-          <input matInput type="text" id="userId" name="userId" placeholder="User ID" required>
-        </mat-form-field>
 
-        <mat-form-field>
-          <mat-select id="role" name="role" placeholder="Role" required>
-            <mat-option value="seller">Seller</mat-option>
-            <mat-option value="customer">Customer</mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-    </mat-card-content>
+    <div class="form-group">
+      <label for="role">Role:</label>
+      <select id="role" name="role" required>
+        <option value="">Choose a role</option>
+        <option value="seller">Seller</option>
+        <option value="customer">Customer</option>
+      </select>
+    </div>
 
-    <mat-card-content fxLayout="row" fxLayoutGap="32px">
-      <div fxFlex="50">
-        <mat-form-field>
-          <input matInput type="text" id="address" name="address" placeholder="Address" required>
-        </mat-form-field>
+    <div class="form-group">
+      <label for="address">Address:</label>
+      <input type="text" id="address" name="address" required>
+    </div>
 
-        <mat-form-field>
-          <input matInput type="text" id="city" name="city" placeholder="City" required>
-        </mat-form-field>
-      </div>
+    <div class="form-group">
+      <label for="city">City:</label>
+      <input type="text" id="city" name="city" required>
+    </div>
 
-      <div fxFlex="50">
-        <mat-form-field>
-          <input matInput type="text" id="state" name="state" placeholder="State" required>
-        </mat-form-field>
+    <div class="form-group">
+      <label for="state">State:</label>
+      <input type="text" id="state" name="state" required>
+    </div>
 
-        <mat-form-field>
-          <input matInput type="text" id="country" name="country" placeholder="Country" required>
-        </mat-form-field>
+    <div class="form-group">
+      <label for="country">Country:</label>
+      <input type="text" id="country" name="country" required>
+    </div>
 
-        <mat-form-field>
-          <input matInput type="text" id="postalCode" name="postalCode" placeholder="Postal Code" required>
-        </mat-form-field>
-      </div>
-    </mat-card-content>
+    <div class="form-group">
+      <label for="postalCode">Postal Code:</label>
+      <input type="text" id="postalCode" name="postalCode" required>
+    </div>
 
-    <mat-card-actions fxLayout="row" fxLayoutAlign="end center">
-      <button mat-raised-button color="primary">Register</button>
-      <p style="margin: 0; margin-right: 8px;">Already have an account?</p>
-      <a routerLink="/login" mat-raised-button color="accent">Login</a>
-    </mat-card-actions>
+    <button class="btn" type="submit">Register</button>
   </form>
+
+  <div class="cta">
+    <p class="cta-text">Already have an account?
+      <a class="cta-btn" routerLink="/login" mat-raised-button color="primary">Login</a>
+    </p>
+  </div>
+</div>
