--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="title">Registration</h1>
+  <h1 class="title">Registrationnn</h1>
   <form>
     <div class="form-group">
       <label for="name">Name:</label>
