--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,78 +1,68 @@
-<div class="container">
-  <h1 class="title">Registrationnn</h1>
-  <form>
-    <div class="form-group">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
-    </div>
-
-    <div class="form-group">
-      <label for="surname">Surname:</label>
-      <input type="text" id="surname" name="surname" required>
-    </div>
-
-    <div class="form-group">
-      <label for="mobile">Mobile Number:</label>
-      <input type="tel" id="mobile" name="mobile" required>
-    </div>
-
-    <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-    </div>
-
-    <div class="form-group">
-      <label for="password1">Password:</label>
-      <input type="password" id="password1" name="password1" required>
-    </div>
-
-    <div class="form-group">
-      <label for="password2">Confirm Password:</label>
-      <input type="password" id="password2" name="password2" required>
-    </div>
-
-
-
-    <div class="form-group">
-      <label for="role">Role:</label>
-      <select id="role" name="role" required>
-        <option value="">Choose a role</option>
-        <option value="seller">Seller</option>
-        <option value="customer">Customer</option>
-      </select>
-    </div>
-
-    <div class="form-group">
-      <label for="address">Address:</label>
-      <input type="text" id="address" name="address" required>
-    </div>
-
-    <div class="form-group">
-      <label for="city">City:</label>
-      <input type="text" id="city" name="city" required>
-    </div>
-
-    <div class="form-group">
-      <label for="state">State:</label>
-      <input type="text" id="state" name="state" required>
-    </div>
-
-    <div class="form-group">
-      <label for="country">Country:</label>
-      <input type="text" id="country" name="country" required>
-    </div>
-
-    <div class="form-group">
-      <label for="postalCode">Postal Code:</label>
-      <input type="text" id="postalCode" name="postalCode" required>
-    </div>
-
-    <button class="btn" type="submit">Register</button>
-  </form>
-
-  <div class="cta">
-    <p class="cta-text">Already have an account?
-      <a class="cta-btn" routerLink="/login" mat-raised-button color="primary">Login</a>
-    </p>
-  </div>
-</div>
+<mat-card class="container">
+  <mat-card-header>
+    <mat-card-title>Registration</mat-card-title>
+  </mat-card-header>
+  <form (ngSubmit)="onSubmit($event)">
+    <mat-card-content>
+      <div class="input-group">
+        <label for="name">Name</label>
+        <input matInput type="text" id="name" name="name" required>
+      </div>
+      <div class="input-group">
+        <label for="surname">Surname</label>
+        <input matInput type="text" id="surname" name="surname" required>
+      </div>
+      <div class="input-group">
+        <label for="mobile">Mobile Number</label>
+        <input matInput type="tel" id="mobile" name="mobile" required>
+      </div>
+      <div class="input-group">
+        <label for="email">Email</label>
+        <input matInput type="email" id="email" name="email" required>
+      </div>
+      <div class="input-group">
+        <label for="password1">Password</label>
+        <input matInput type="password" id="password1" name="password1" required>
+      </div>
+      <div class="input-group">
+        <label for="password2">Confirm Password</label>
+        <input matInput type="password" id="password2" name="password2" required>
+      </div>
+      <div class="input-group">
+        <label for="role">Role</label>
+        <mat-select id="role" name="role" required>
+          <mat-option value="seller">Seller</mat-option>
+          <mat-option value="customer">Customer</mat-option>
+        </mat-select>
+      </div>
+      <div class="input-group">
+        <label for="address">Address</label>
+        <input matInput type="text" id="address" name="address" required>
+      </div>
+      <div class="input-group">
+        <label for="city">City</label>
+        <input matInput type="text" id="city" name="city" required>
+      </div>
+      <div class="input-group">
+        <label for="state">State</label>
+        <input matInput type="text" id="state" name="state" required>
+      </div>
+      <div class="input-group">
+        <label for="country">Country</label>
+        <input matInput type="text" id="country" name="country" required>
+      </div>
+      <div class="input-group">
+        <label for="postalCode">Postal Code</label>
+        <input matInput type="text" id="postalCode" name="postalCode" required>
+      </div>
+      </mat-card-content>
+      <mat-card-actions fxLayoutAlign="end center">
+      <button mat-raised-button color="primary" class="btn">Register</button>
+      <div class="cta">
+      <p class="cta-text">Already have an account?</p>
+      <a routerLink="/login" mat-raised-button color="accent" class="cta-btn">Login</a>
+      </div>
+      </mat-card-actions>
+      
+        </form>
+      </mat-card>
